frontend/test/should_fail/matchclassimplementsdefnondef_002.grg
#using "matchclassmodel.gm"

test t() implements shared
{
	-e:Edge->;
}

match class shared
{
	def -e:Edge->;
}
